# GroqWhisperCheck

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  GLOBAL_INSTALL.md  MY_SETUP.md  QUICK_REFERENCE.md  README.md  SETUP_GUIDE.md  UPDATES_SEPTEMBER_2025.md  USAGE.md  add_to_path.ps1  install_global.bat  pyproject.toml  requirements.txt  setup_from_gist.ps1  test_compound.py  test_groq.py  uv-guide-for-claude.md
.claude/: hooks-example.md  settings.local.json
.claude/agents/: README.md  research-agent.json  summary-agent.json  testing-agent.json
docs/: cli-spec.md  projects.md  whisper-spec.md
groq_cli/: __init__.py  chat.py  main.py  transcriber.py  utils.py
