[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "groq-cli"
version = "0.1.0"
description = "CLI tool for Groq API with Whisper transcription and chat completion"
authors = [{name = "Josh Stephens", email = "jstephens@eusd.org"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "groq>=0.11.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.8.0"
]

[project.scripts]
gq = "groq_cli.main:cli"
groqchat = "groq_cli.main:cli"
groq-cli = "groq_cli.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0"
]

[tool.setuptools.packages.find]
include = ["groq_cli*"]